kubernetes/ticket-hive-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-hive
  labels:
    app: ticket-hive
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticket-hive
  template:
    metadata:
      labels:
        app: ticket-hive
    spec:
      containers:
      - name: ticket-hive
        image: wigsicle/ticket-hive:latest  # Replace with your Docker image
        ports:
        - containerPort: 5000  # Change this if your application listens on a different port
        volumeMounts:
        - name: app-volume
          mountPath: /app
      volumes:
      - name: app-volume
        emptyDir: {}  # Use a volume to hold the application code and .env file, modify as needed
