kubernetes/ticket-hive-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ticket-hive-service
spec:
  type: NodePort
  selector:
    app: ticket-hive
  ports:
    - port: 5000  # The port that your application listens to
      targetPort: 5000
      nodePort: 30000  # Choose a port in the range of 30000-32767
