kubernetes/ticket-transfer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ticket-transfer-service
spec:
  selector:
    app: ticket-transfer-app
  ports:
    - protocol: TCP
      port: 50051
      targetPort: 50051
      nodePort: 30051  # Choose a port between 30000-32767
  type: NodePort
